--- a/style/main.css
+++ b/style/main.css
@@ -2,14 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn {
-  @apply px-3 py-2 rounded-full transition-all;
+@layer components {
+  .btn {
+    @apply px-3 py-2  rounded-full transition-all;
+  }
+
+  .btn--primary {
+    @apply bg-blue-400 hover:bg-blue-500;
+  }
+
+  .btn--error {
+    @apply bg-red-500 hover:bg-red-600 text-white;
+  }
 }
 
-.btn--primary {
-  @apply bg-blue-400 hover:bg-blue-500;
-}
-
-.btn--error {
-  @apply bg-red-500 hover:bg-red-600 text-white;
+@layer base {
+  h1 {
+    @apply text-red-500;
+  }
+  p {
+    @apply text-violet-900;
+  }
 }
