--- a/style/main.css
+++ b/style/main.css
@@ -2,14 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn{
-    @apply py-2 px-4 rounded-md  font-medium
+
+@layer base{
+    h1{
+        @apply text-sm font-bold
+    }
+    p{
+        @apply text-base font-normal
+    }
 }
 
-.btn-checkout{
-    @apply bg-green-500 text-white 
-}
-
-.btn-cart{
-    @apply bg-orange-500 text-white
+@layer components{
+    .btn{
+        @apply py-2 px-4 rounded-md text-base font-medium
+    }
+    
+    .btn-checkout{
+        @apply bg-green-500 hover:bg-green-600 transition-all duration-300 text-white 
+    }
+    
+    .btn-cart{
+        @apply bg-orange-500 hover:bg-orange-600 transition-all duration-300 text-white
+    }
 }
